--- a/RA_Project/preambel/preambel.tex
+++ b/RA_Project/preambel/preambel.tex
@@ -101,7 +101,7 @@
    %nonamelimits, % Opposite of namelimits.
    %leqno,     % Place equation numbers on the left.
    %reqno,     % Place equation numbers on the right.
-   %fleqn,     % Position equations at a fixed indent from the left margin rather than
+   %fleqn,     % Position equations at a fixed t from the left margin rather than
                % centered in the text column.
 ]{amsmath} %
 % eqnarray nicht zusammen mit amsmath benutzen, siehe l2tabu.pdf für Hintergruende.
@@ -1618,7 +1618,7 @@
 % {\end{multicols}\clearpage}
 % \makeatother
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\setlength\parindent{0pt}
 
 % ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 % Zusätzliche Pakete
