updated doku files

--- a/RA_Project/Scheduler.tex
+++ b/RA_Project/Scheduler.tex
@@ -99,6 +99,8 @@
 \appendix
 \pagenumbering{Roman}
 \section{Listings}
+\subsection{Variablen}
+\lstinputlisting{./listing/variables.inc}
 \subsection{Main}
 \lstinputlisting{./listing/main.a51}
 \subsection{Scheduler}
