--- a/RA_Project/content/kontrollausgaben.tex
+++ b/RA_Project/content/kontrollausgaben.tex
@@ -1,4 +1,4 @@
-\section{Kontrollausgben}
+\section{Kontrollausgaben}
 Im folgenden werden die Kontrollausgaben aus den mitgelieferten Befehlssequenzen erzeugt.
 
 
@@ -7,7 +7,7 @@ Im folgenden werden die Kontrollausgaben aus den mitgelieferten Befehlssequenzen
 \begin{align*}
 \text{Befehlssequenz} &: \mathtt{x,a,b,x,c,a,b,a,c,b,b,a,c,c}
 \end{align*}
-
+Kontrollausgabe:
 \lstinputlisting{./listing/os1.dat}
 
 
@@ -18,7 +18,7 @@ Im folgenden werden die Kontrollausgaben aus den mitgelieferten Befehlssequenzen
 \text{Befehlssequenz} &: \mathtt{a,z,z,a,z,z,a}
 \end{align*}
 
-
+Kontrollausgabe:
 \lstinputlisting{./listing/os2.dat}
 
 
@@ -28,5 +28,5 @@ Im folgenden werden die Kontrollausgaben aus den mitgelieferten Befehlssequenzen
 \text{Befehlssequenz} &: \mathtt{z,b,a,z,z,a,c,z,a}
 \end{align*}
 
-
+Kontrollausgabe:
 \lstinputlisting{./listing/os3.dat}
