update grammer and style

--- a/RA_Project/content/aufgabenstellung.tex
+++ b/RA_Project/content/aufgabenstellung.tex
@@ -1,4 +1,4 @@
 \section{Problembeschreibung}
-Dieses Programm befasst sich mit der Prozessverwaltung auf dem 8051. Dies ist notwendig, damit mehrere Prozesse pseudoparallel auf einer CPU arbeiten können. Hierbei soll eine Art Kontext-Switch Strategie entwickelt werden. Somit sieht es für einen Prozess so aus, als wäre dieser allein im System. Diese Prozessverwaltung umfasst das Erzeugen und Löschen eines Prozesses, sowie die Umschaltung zwischen den Prozessen im Speicher. 
+Das im Folgenden beschriebene Programm befasst sich mit der Prozessverwaltung auf dem 8051. Dies ist notwendig, damit mehrere Prozesse pseudoparallel auf einer CPU arbeiten können. Hierbei soll eine Art Kontext-Switch Strategie entwickelt werden. Somit sieht es für jeden Prozess so aus, als wäre dieser allein im System. Die Prozessverwaltung umfasst das Erzeugen und Löschen eines Prozesses, sowie die Umschaltung zwischen den Prozessen im Speicher. 
 
 Für den Funktionstest werden die in der Anforderung beschriebenen Prozesse implementiert und getestet.  
