--- a/RA_Project/content/kontrollausgaben.tex
+++ b/RA_Project/content/kontrollausgaben.tex
@@ -1,5 +1,5 @@
 \section{Kontrollausgaben}
-Im folgenden werden die Kontrollausgaben aus den mitgelieferten Befehlssequenzen erzeugt.
+Im Folgenden werden die Kontrollausgaben aus den vorgebenden Befehlssequenzen erzeugt.
 
 
 \subsection{Sequenz 1 aus os1.inc}
